add pipfile and pipfile.lock in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -309,4 +309,6 @@ cython_debug/
 
 python_scripts/main/build
 python_scripts/main/dist
+python_scripts/main/Pipfile
+python_scripts/main/Pipfile.lock
 .idea
